src/style/coursePage/courseMedia.scss
@media (max-width: 1750px) {
  .layout {
    .content .lectures ul {
      max-height: 83vh;
    }
    .content .video h2 {
      max-width: 90%;
    }
  }
}

@media (max-width: 1500px) {
  .content .video h2 span .info {
    display: none;
  }
}

@media (max-width: 1450px) {
  .content .video .preview:before {
    display: none;
  }
  .layout .content .lectures ul li {
    font-size: 15px;
    padding: 10px 15px;
  }
  .layout .header nav {
    height: 50px;
  }
  .layout .header nav .links {
    gap: 30px;
  }
  .layout .header nav .logo {
    width: 25px;
    height: 35px;
  }
  .layout .header nav .links a {
    font-size: 17px;
  }
  .layout .header nav .links div {
    img {
      width: 26px;
      height: 26px;
    }
  }
  .layout {
    .content .container {
      padding: 20px 0 0px 0;
    }
    .content .video h1 {
      font-size: 25px;
    }
    .content .video h2 {
      margin-top: 15px;
      font-size: 20px;
      line-height: 24px;
    }
    .content .video .preview button {
      font-size: 18px;
    }
    .content .video {
      justify-content: center;
    }
    .content .video iframe {
      width: 50vw;
      height: 30vw;
    }
    .content .video .note textarea {
      width: 50vw;
    }
    .content .lectures {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      min-width: 250px;
    }
    .content .lectures .lectures__title {
      width: 100%;
      padding: 15px 0;
      font-size: 20px;
    }
    .content .container {
      gap: 40px;
    }
    .content .lectures ul {
      max-height: 75vh;
    }
    .content .message-block .message {
      font-size: 24px;
      text-align: center;
    }
    .content .message-block a {
      font-size: 18px;
    }
  }
}
@media (max-width: 1100px) {
  .layout .content .lectures ul {
    max-height: 85vh;
  }
  .layout .content .container {
    max-width: 99%;
  }
  .layout .content .container {
    padding: 5px 0;
  }
  .layout .content .lectures ul li {
    font-size: 14px;
  }
  .layout .content .video iframe {
    width: 60vw;
    height: 35vw;
    margin-top: 20px;
  }
  .layout .content .video .note textarea {
    width: 60vw;
  }
  .content .video .note {
    width: 60vw;
    justify-content: flex-start;
  }
  .content .video .note {
    display: flex;
    flex-direction: column;
  }
  .layout .content .video h1 {
    max-width: 65%;
  }
  .layout .content .video h2 {
    max-width: 80%;
    font-size: 18px;
    line-height: 20px;
  }
  .layout .content .lectures ul li {
    line-height: 20px;
  }
}

@media (max-width: 900px) {
  .layout .content {
    height: auto;
  }
  .layout .content:has(.preview) {
    height: 100%;
  }
  .layout .content .video .preview {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
  }
  .layout .content .container {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    padding: 15px 5px 0 5px;
    gap: 50px;
  }
  .layout .content .video .note textarea {
    font-size: 15px;
  }
  .layout .content .video h1 {
    max-width: 100%;
    padding-top: 20px;
    text-align: center;
  }
  .layout .content .video h2 {
    max-width: 80%;
    text-align: center;
  }
  .layout .content .video iframe {
    width: 85vw;
    height: 50vw;
  }
  .layout .content .video .note textarea {
    width: 85vw;
  }
  .layout .content .lectures {
    width: 85vw;
  }
  .layout .content .lectures ul {
    max-height: 100%;
    padding-bottom: 20px;
  }
  .layout .content .video {
    display: flex;
    justify-content: center;
    align-items: center;
    .text {
      display: flex;
      align-items: center;
      flex-direction: column;
      justify-content: center;
    }
  }
}

@media (max-width: 500px) {
  .layout .content .video h1 {
    font-size: 18px;
    max-width: 80%;
  }
  .layout .content .video h2 {
    max-width: 90%;
    font-size: 16px;
  }
}

@media (max-width: 430px) {
  .layout .content .message-block .message {
    font-size: 20px;
  }
  .layout .content .message-block a {
    font-size: 18px;
    padding: 10px 15px;
  }
}

//header
@media (max-width: 700px) {
  .layout .header nav .logo {
    display: none;
  }
  .layout .header nav {
    justify-content: center;
    max-width: 100%;
    height: 60px;
  }
  .layout .header nav .links {
    justify-content: space-around;
    width: 100%;
  }
}
@media (max-width: 550px) {
  .layout .header nav {
    max-width: 98%;
    height: 55px;
  }
  .layout .header nav .links a {
    font-size: 15px;
  }
  .layout .header nav .links {
    gap: 0px;
  }
}

